--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,24 +1,28 @@
 {
-    "compilerOptions": {
-      "target": "ES2022",
-      "module": "NodeNext",
-      "lib": ["ES2022"],
-      "moduleResolution": "NodeNext",
-      "rootDir": "src",
-      "outDir": "build",
-      "allowSyntheticDefaultImports": true,
-      "importHelpers": true,
-      "alwaysStrict": true,
-      "sourceMap": true,
-      "forceConsistentCasingInFileNames": true,
-      "noFallthroughCasesInSwitch": true,
-      "noImplicitReturns": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "noImplicitAny": true,
-      "noImplicitThis": true,
-      "strictNullChecks": true,
-      "esModuleInterop": true
-    },
-    "include": ["src/**/*", "__tests__/**/*"]
-  }
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "NodeNext",
+    "lib": [
+      "ES2022"
+    ],
+    "rootDir": "src",
+    "outDir": "build",
+    "allowSyntheticDefaultImports": true,
+    "importHelpers": true,
+    "alwaysStrict": true,
+    "sourceMap": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
+    "esModuleInterop": true,
+  },
+  "include": [
+    "src/**/*",
+    "__tests__/**/*"
+  ]
+}
