--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "deepmerge": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
     "rehype-parse": "^9.0.0",
